--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "jsforce": "^1.4.1",
+    "deamd": "^1.0.0",
     "gulp": "^3.8.11",
     "gulp-zip": "^3.0.2",
     "through2": "^0.6.5",
